--- a/src/view/Service.fxml
+++ b/src/view/Service.fxml
@@ -62,7 +62,7 @@
                                     <Label fx:id="SumCost" text="Label" />
                                  </children>
                               </HBox>
-                              <Button mnemonicParsing="false" stylesheets="@../css/button.css" text="Thanh toán" AnchorPane.rightAnchor="0.0" />
+                              <Button fx:id="btn_thanhtoan" mnemonicParsing="false" stylesheets="@../css/button.css" text="Thanh toán" AnchorPane.rightAnchor="0.0" />
                            </children>
                         </AnchorPane>
                      </content>
