--- a/bin/view/Rooms.fxml
+++ b/bin/view/Rooms.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
@@ -9,7 +13,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RoomController">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RoomController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -18,8 +22,9 @@
          <children>
             <HBox alignment="CENTER_LEFT" spacing="5.0" AnchorPane.leftAnchor="0.0">
                <children>
-                  <TextField fx:id = "searchTextField" promptText="Tìm kiếm" />
-                  <Button mnemonicParsing="false" text="Tìm kiếm" />
+                  <TextField fx:id="searchTextField" promptText="Tìm kiếm" />
+                  <Button fx:id="btn_refresh" mnemonicParsing="false" text="Refresh" />
+                  <Button fx:id="btn_timkiem" mnemonicParsing="false" text="Tìm kiếm" />
                </children>
             </HBox>
             <Button mnemonicParsing="false" onAction="#AddNewRoomAction" text="Thêm" AnchorPane.rightAnchor="0.0" />
