thay dổi giao diện

--- a/bin/view/Schedule.fxml
+++ b/bin/view/Schedule.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -39,18 +40,9 @@
             <RowConstraints vgrow="ALWAYS" />
         </rowConstraints>
          <children>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <AnchorPane>
                <children>
-                  <DatePicker fx:id="datePicker" showWeekNumbers="true" />
-                  <HBox fx:id="hbox" alignment="BOTTOM_LEFT" GridPane.columnIndex="1">
+                  <HBox fx:id="hbox" alignment="BOTTOM_LEFT" layoutX="197.0" AnchorPane.leftAnchor="0.0" GridPane.columnIndex="1">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -87,25 +79,27 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                  <DatePicker fx:id="datePicker" layoutY="12.0" opacity="0.0" prefHeight="50.0" prefWidth="60.0" showWeekNumbers="true" AnchorPane.leftAnchor="0.0">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </DatePicker>
+                  <HBox alignment="CENTER_RIGHT" layoutX="394.0" layoutY="22.0" spacing="10.0" AnchorPane.rightAnchor="0.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                      <children>
                         <Button fx:id="btn_them" mnemonicParsing="false" text="Thêm phim vào lịch này" />
                         <ComboBox fx:id="cb_phong" promptText="Chọn phòng">
                   </ComboBox>
                            <!--   <MenuButton mnemonicParsing="false" text="Tên phòng">
                           <items>
-                                  <MenuItem mnemonicParsing="false" text="Phòng 1" />
-                                    <MenuItem mnemonicParsing="false" text="Phòng 2" />
-                                    <MenuItem mnemonicParsing="false" text="Phòng 3" />
-                                </items>
-                              </MenuButton> -->
+                                        <MenuItem mnemonicParsing="false" text="Phòng 1" />
+                                          <MenuItem mnemonicParsing="false" text="Phòng 2" />
+                                          <MenuItem mnemonicParsing="false" text="Phòng 3" />
+                                      </items>
+                                    </MenuButton> -->
                      </children>
                   </HBox>
                </children>
-               <padding>
-                  <Insets bottom="10.0" />
-               </padding>
-            </GridPane>
+            </AnchorPane>
             <GridPane stylesheets="@../css/Font.css" GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints minWidth="10.0" />
