--- a/src/view/Movies.fxml
+++ b/src/view/Movies.fxml
@@ -42,6 +42,18 @@
                </children>
             </AnchorPane>
          </top>
+         <bottom>
+            <AnchorPane>
+               <children>
+                  <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Label text="Số lượng phim:" BorderPane.alignment="CENTER" />
+                        <Label fx:id="lb_soluongphim" text="Label" />
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+         </bottom>
       </BorderPane>
    </children>
    <padding>
