--- a/src/view/Service.fxml
+++ b/src/view/Service.fxml
@@ -75,6 +75,7 @@
          </padding>
       </AnchorPane>
    </top>
+   
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -85,4 +86,16 @@
          </content>
       </ScrollPane>
    </center>
+   <bottom>
+        <AnchorPane>
+           <children>
+              <HBox alignment="CENTER" spacing="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                 <children>
+                    <Label text="Số lượng sản phẩm:" BorderPane.alignment="CENTER" />
+                    <Label fx:id="lb_soluongsanpham" text="Label" />
+                 </children>
+              </HBox>
+           </children>
+        </AnchorPane>
+     </bottom>
 </BorderPane>
