--- a/bin/view/Customer.fxml
+++ b/bin/view/Customer.fxml
@@ -43,8 +43,11 @@
                         <Button fx:id="btn_refresh" mnemonicParsing="false" text="Refresh" />
                      </children>
                   </HBox>
-                   <Button fx:id="btn_xoa" mnemonicParsing="false" text="Xóa" AnchorPane.rightAnchor="0.0"/>
+                   <Button fx:id="btn_xoa" mnemonicParsing="false" text="Xóa" AnchorPane.rightAnchor="0.0" />
                </children>
+               <BorderPane.margin>
+                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+               </BorderPane.margin>
             </AnchorPane>
          </top>
       </BorderPane>
